--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,18 +8,15 @@
 			<h1><a href="">Django Girls Blog</a>
 		</div>
 
-		<div>
-			<p>published: 23.03.2017, 11:50</p>
-			<h2><a href="">My first post</a></h2>
-			<p> O Lula molusco nunca vai preso, estou ansioso</p>
-		</div>
+		{% for post in posts %}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</div>
+			
 
-		<div>
-			<p>published: 23.03.2017, 11:55</p>
-			<h2><a href="">My second post</a></h2>
-			<p>gdgfgiuqhjnvrahgknvbanvioenrvlkanhajskhgj hdhfjkasdhf   lahfheuihfg  hytwfwwddwswsw trrsedaewjhtytrd nhgfds cbdfgtre</p>
-		</div>
-
+		{% endfor %}
 	</body>
 
 </html>
